# chatspy

./: IDMAPPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROLE_CONSTANTS_FIX.md  pyproject.toml  requirements.txt  test_contract_fee.py  test_idmapper.py
src/chatspy/: activity.py  cache.py  ccrypto.py  celery_config.py  clients.py  compensation.py  config.py  constants.py  decorators.py  exceptions.py  faucet.py  logger.py  middleware.py  models.py  permissions.py  schemas.py  secret.py  security.py  services.py  tasks.py  utils.py  worker_hooks.py
src/tests/: test_kafka.py
