[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatspy"
version = "0.1.2"
description = "Common utilities for CHATS services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "web3>=7.6.1",
    "redis>=5.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "ruff>=0.1.6"
]

[tool.setuptools]
packages = ["src/chatspy"]

[tool.hatch.build.targets.wheel]
packages = ["src/chatspy"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.black]
line-length = 120
target-version = ['py39']
